--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Quick Add Calculator",
   "short_name": "Quick Add",
   "description": "Simple addition calculator with currency mode",
-  "start_url": "./",
+  "start_url": "/quick-add/",
   "display": "standalone",
   "background_color": "#f5f5f5",
   "theme_color": "#007bff",
